--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>404 Page not found &middot; Simon Cheng</title>
+  <title>404 Page not found &middot; Simon Cheng Haha</title>
   <meta name="description" content="" />
 
   
@@ -31,7 +31,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="/"><h1>Simon Cheng</h1></a>
+      <a href="/"><h1>Simon Cheng Haha</h1></a>
       <p class="lead">
       An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.
       </p>
