--- a/cn3-late-autumn/index.html
+++ b/cn3-late-autumn/index.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body class=" ">
+<body class="cn-writing">
   <aside class="sidebar">
     <div class="container sidebar-sticky">
       <div class="sidebar-about">
