--- a/cn3-late-autumn/index.html
+++ b/cn3-late-autumn/index.html
@@ -92,8 +92,7 @@
       <p>放松着，挥霍着，享受着有限的闲逸时光。</p>
       <p>未曾想过的地方，分外柔软。</p>
       <p>深秋是一次探索，一戳一捏地碰着。<br></br></p>
-      <p>深秋是一种痒，不知点
-        <!-- raw HTML omitted --><span style='border-bottom: 2px solid #326952;'>解</span>。
+      <p>深秋是一种痒，不知点<span style='border-bottom: 2px solid #326952;'>解</span>。
       </p>
       </p>
       <p>但如果有，</p>
